# agent-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/router/: index.ts
frontend/src/utils/: format.ts  text.ts
frontend/src/views/: CrawlPage.vue  RunDetailPage.vue  RunsPage.vue
src/agent_mcp_cdp/: __init__.py  agent.py  cdp_browser.py  cli.py  config.py  mcp_server.py  models.py  product_search.py  proofreading.py
src/agent_mcp_cdp/api/: __init__.py  app.py  jobs.py  run_store.py  schemas.py
src/agent_mcp_cdp/crawlers/: __init__.py  browser_session.py
src/agent_mcp_cdp/extractors/: __init__.py  product_features.py
src/agent_mcp_cdp/schemas/: payloads.py
src/agent_mcp_cdp/services/: crawl_workflow.py  output_writer.py  product_catalog.py  proofreading.py
tests/: test_api.py  test_config.py  test_feature_extractor.py  test_payloads.py  test_product_catalog.py  test_product_search.py  test_workflow.py
